--- a/vercel.json
+++ b/vercel.json
@@ -15,6 +15,10 @@
       "dest": "/assets/$1"
     },
     {
+      "src": "/(.+\\.(ico|png|jpg|jpeg|gif|webp|svg|css|js))",
+      "dest": "/$1"
+    },
+    {
       "src": "/(.*)",
       "dest": "/index.html"
     }
